# peh-validation-library

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  integration_pypeh.yml
scripts/: format.sh  lint.sh  test.sh  test_subset.sh
src/peh_validation_library/: __init__.py
src/peh_validation_library/config/: config_reader.py
src/peh_validation_library/config/check_module/: precision_function.py  template.py
src/peh_validation_library/core/check/: check_cmd.py  schemas.py
src/peh_validation_library/core/models/: schemas.py
src/peh_validation_library/core/utils/: enums.py  mappers.py
src/peh_validation_library/dataframe/: df_reader.py
src/peh_validation_library/error_report/: error_collector.py  error_schemas.py  report.py
src/peh_validation_library/validator/: validator.py
tests/tests_config/: test_config.py
tests/tests_core/tests_check/: test_check_cmd.py  test_schemas.py
tests/tests_core/tests_models/: test_check_schema.py  test_column_schema.py  test_df_schema.py
tests/tests_dataframe/: test_df_reader.py
tests/tests_error_report/: test_error_collector.py
tests/tests_validator/: test_validator.py
